# pipelined_ingestion

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
DatasetReader/: README.md
DatasetReader/docs/changelog/: 0.7.0.md
DatasetReader/src/asml/hmi/DatasetReader/orchestrators/: __init__.py  dl_detection_orchestrator.py  dl_fe_orchestrator.py
DatasetReader/src/asml/hmi/DatasetReader/parsers/: base_parser.py  ddf_parser.py  defect_parser_util.py  defect_result_manager.py  defect_schema_consolidator.py  dzf_parser.py  patch_parser.py  raw_file_parser.py
docs/: progress_log.md
docs/design/: pr1_corpus_foundation.md  pr2_environment_seeding_metrics.md  pr3_v2_serial_ranged_and_gate.md  pr4_v1_buffered_instrumentation.md  pr5_v3_pipelined.md  pr6_sweep_report.md  rgw_pipelined_ingestion_benchmark.md
manifests/: large-seed42.jsonl  medium-seed42.jsonl  small-seed42.jsonl
results/: seed.jsonl
scripts/: netem.sh
src/rgw_ingest_bench/: __init__.py  __main__.py  cli.py  config.py  fakeraw.py  layout.py  manifest.py  metrics.py  parse.py  probe.py  seed.py
tests/: conftest.py  test_cli.py  test_cli_seed.py  test_config.py  test_fakeraw.py  test_fakeraw_stream.py  test_fixtures.py  test_integration.py  test_integration_seed.py  test_layout.py  test_manifest.py  test_metrics.py  test_parse.py  test_probe.py  test_seed.py
