[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rgw-ingest-bench"
version = "0.1.0"
description = "RGW pipelined-ingestion benchmark harness — synthetic corpus foundation (PR 1)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pydantic>=2",
    "polars",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "psutil",
]

[project.scripts]
rgw-ingest-bench = "rgw_ingest_bench.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rgw_ingest_bench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: end-to-end CLI tests (subprocess, slow)",
]

[tool.coverage.run]
branch = true
source = ["rgw_ingest_bench"]

[tool.coverage.report]
fail_under = 100
show_missing = true
