[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rgw-ingest-bench"
dynamic = ["version"]
description = "RGW pipelined-ingestion benchmark harness — synthetic corpus foundation (PR 1)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pydantic>=2",
    "polars",
    "s3fs",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "psutil",
    "moto[server]",
]

[project.scripts]
rgw-ingest-bench = "rgw_ingest_bench.cli:main"

# Single source of truth for the version: read from the package __init__.
# Never write the version anywhere but src/rgw_ingest_bench/__init__.py.
[tool.hatch.version]
path = "src/rgw_ingest_bench/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/rgw_ingest_bench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: end-to-end CLI tests (subprocess, slow)",
    "minio: integration tests against a live object store (subprocess, needs MinIO/RGW)",
    "netem: latency-injection tests (needs Linux root + sudo tc)",
]

[tool.coverage.run]
branch = true
source = ["rgw_ingest_bench"]

[tool.coverage.report]
fail_under = 100
show_missing = true
